--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,32 +1,34 @@
 <%= form_for(post) do |f| %>
-  <fieldset>
-    <% if post.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+  <table class="table">
+      <fieldset>
+        <% if post.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
-        <ul>
-        <% post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+            <ul>
+            <% post.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
         <% end %>
-        </ul>
-      </div>
-    <% end %>
 
-    <%= f.label :title %>
-    <%= f.text_field :title %>
+        <%= f.label :title %>
+        <%= f.text_field :title %>
 
-    <% if post.errors.messages[:title].any? %>
-      <div class="error">
-        <%= post.errors.messages[:title][0] %>
-      </div>
-    <% end %>
+        <% if post.errors.messages[:title].any? %>
+          <div class="error">
+            <%= post.errors.messages[:title][0] %>
+          </div>
+        <% end %>
 
-    <br>
-    <%= f.text_area :thread, size: "100x12" %>
+        <br>
+        <%= f.text_area :thread %>
 
 
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-  </fieldset>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+      </fieldset>
+  </table>
 <% end %>
