--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,29 +1,35 @@
-
-
 <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="panel panel-default">
+ <div class="panel-heading">
+   <h3 class="panel-title">Recent Posts</h3>
+ </div>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.thread %></td>
-        <% if @current_user == post.title %>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+ <table class="table">
+   <thead>
+     <tr>
+       <th> Title </th>
+       <th> Content </th>
+       <th colspan="3"></th>
+     </tr>
+   </thead>
 
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+        
+          <td><%= link_to post.title, post_path(post.id)  %></td>
+          
+          <% if @current_user == post.user %>
+          <td><%= link_to 'Show', post %></td>
+          <td><%= link_to 'Edit', edit_post_path(post) %></td>
+          <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
 
 <%= link_to 'New Post', new_post_path %>
